--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="description" content="Edward Enciso Resume for Github">
+  <meta name="author" content="862203261">
 
-  <title>John Doe - Business Administration</title>
+  <title>Edward Enciso - Filmaker</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Edward</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="EdwardEnciso.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,33 +51,35 @@
         </li>
       </ul>
     </div>
-  </div>
+    </div>
   </nav>
 
   <div class="container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Edward Enciso
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Theatre, Film, and Digital Production 📷 </div>
+        <p class="lead mb-4"> <br><b>About Me</b><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+         
+          Hello everyone my name is Edward. I am a hardworking and enthusiastic college student working towards a bachelor’s degree in theater, film, and digital production.I would describe myself as dedicated, hardworking, and a dependable member of any team. I am always willing to learn and push myself to become the best version of myself. <br>
+          I am currently a member of R'shorts a small film club at my university where I have the opportunity to be on film production sets. I am currently working on the film production set of Delilah  as a grip and am extremely excited to be a part of that project. I have huge love for film and my goal is to translate that enthusiasm into a digestible and enjoyable work. I pride myself on my ability to constantly grow and improve upon my own filmmaking. I am learning to become a director and I also write mini scripts on my own to build up my own writing and creative skills.<br> 
+Over the fall and summer I interned at Jay N Jay studios, an independent film studio out of Provo Utah. Over there I had the ability to partner up with a fellow writer and write scripts for a mini series known as Fan theory for the independent studio. Additionally as a social media intern I had the opportunity to edit and direct small videos as content for their tik tok page which has amassed over 273k followers '@liveactionavatar'. Through that internship I polished my video editing skills and was able to develop an advanced understanding of After effects, imovie and marketing patterns that drove up the studio's social media presence. <br>
+In high school I had the opportunity to part of a pilot program for entrepreneurship program. Partnering with Boston Consulting Group Digital Ventures, I had the opportunity to create my own startup with industry professionals and lead a UI/UX and a Product manager into creating a mobile ios application known as Homefoo. A startup bringing home cooked meals to underprivileged college students. In the program I learned the fundamentals of entrepreneurship, and pitched Homefood to a panel of judges where I won the creative concept award. I learned how to create income flows within a startup, overcoming barriers of entry, understanding target audiences, building mission statements. In this mentorship program I learned the fundamentals of business and was able to learn the specific types of mindsets, and cultures that startups have to create in order to become successful. Additionally it was a great networking opportunity where we were able to see professionals in their own environment.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="www.linkedin.com/in/edward-enciso-a704aa186">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/EdwardEnciso">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/eeedwa1">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:encisoedward03@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,53 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Grip - Film Crew Delialah</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://narrativebased.wixsite.com/rshorts">R'Shorts</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Collaborated with a Gaffer & Cinematographer to create lighting for on set use <br>
+              • Assembled lighting equipment for on set use.<br>
+              • Ensured safety on set by following proper filmmaking etiquette<br>
+              • Devised and implemented light techniques necessary per different location<br>
+
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">Jan 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Social Media Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.jaynjaystudios.com/">JaynJay Studios</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Proposed marketing strategies and actively engaged in company meetings <br>
+              • Successfully increased engagement through original content on Tik Tok<br>
+              • Wrote Scripts for mini series on Youtube - Fan Theory<br>
+
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2021 - Dec 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">BCG Digital Venturs Mentee</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://bcgdv.com/contact-us/los-angeles/">BCGDV Digital Ventures</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
 
-          </p>
+              • Collaborated with industry workers to come up with a small startup <br>
+              • Pitched a startup to investors known as Homefoo<br>
+              • Proposed a business plan and Helped start the BCGDV mentorship with Brightstar Schools <br>
+              •Won Creative Concept award<br>
+
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2019 - May 2020</span>
           </div>
         </div>
 
@@ -152,63 +159,45 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of the Arts</div>
+            <div>Theatre, Film, and Digital Production</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - June 2024</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+        <hr class="m-0">
 
+        <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
+          <div class="w-100">
+            <h2 class="mb-5">Portfolio</h1>
+              <center>
+                <img src="JayNjay.jpg" width="500px">
+                <img src="JayNjay2.jpg" width="500px"><br>
+                <img src="rshorts.jpg" width="500px">
+                <img src="rshorts2.jpg" width="500px"><br>
+                <img src="BCGDV.jpg" width="500px">
+                <img src="BCGDV2.jpg" width="500px"><br>
+              </center>
+          </div>
+        </section>
+
+        <hr class="m-0">
+        <center>&copy; <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script> Edward Enciso</center><br>
       </div>
-    </section>
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <hr class="m-0">
+      <!-- Plugin JavaScript -->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
-      </div>
-    </section>
-
-    <hr class="m-0">
-    <center>&copy; <script type="text/javascript">
-  document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
-  </div>
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
+      <!-- Custom scripts for this template -->
+      <script src="js/resume.min.js"></script>
 </body>
+
 </html>
